<resources>

    <string name="app_name">nutrally</string>
    <!-- Strings related to login -->
    <string name="prompt_email">    Email</string>
    <string name="prompt_password">    Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_forgot_password">Forgot password</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="News">News</string>


    <!-- Strings related to homescreen -->
    <string name="Home">Home</string>
    <string name="action_scan">Scan</string>
    <string name="action_user_profile">Profile</string>
    <string name="action_options">Options</string>
    <string name="action_Log_out">Log out</string>
    <string name="welcome">Welcome</string>

    <!-- Strings related to ingredients -->
    <string name="action_return_list">Return to list</string>
    <string name="action_return_home">Return to home</string>

    <!-- Strings related to ingredients -->
    <string name="action_add">Add to my list</string>

    <!-- Other Strings -->
    <string name="RepeatPassword">\@string/Repeat Password</string>
    <string name="repeatPassword">Repeat Password</string>
    <string name="Name">Name</string>
    <string name="name">Name</string>
    <string name="Age">Age</string>
    <string name="Allergies">Allergies</string>
    <string name="OtherConditions">Other Conditions</string>
    <string name="username">username</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="Password">Password</string>
    <string name="confirm">confirm</string>
    <string name="log_in">log_in</string>
    <string name="Return">Return</string>
    <string name="Fullname">Fullname</string>
    <string name="register">Register</string>

</resources>