<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signUp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="7dp"
        android:hint="@string/username"
        android:scrollbarThumbHorizontal="@drawable/ic_launcher_foreground"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Name">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/usernameTF"
            android:layout_height="wrap_content"
            tools:targetApi="R"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="82dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="7dp"
        android:hint="@string/Fullname"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImg3">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/nameTf"
            android:layout_height="wrap_content"
            tools:targetApi="R" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="36dp"
        android:hint="@string/Password"
        app:layout_constraintBottom_toTopOf="@+id/confirmBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/passwordTf"
            android:layout_height="wrap_content"
            tools:targetApi="R" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="7dp"
        android:hint="@string/email"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/emailTf"
            android:layout_height="wrap_content"
            tools:targetApi="R"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/signUpLbl"
        android:layout_width="159dp"
        android:layout_height="34dp"
        android:layout_marginStart="126dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="126dp"
        android:layout_marginBottom="632dp"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Sign Up" />

    <ImageView
        android:id="@+id/logoImg3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="151dp"
        android:layout_marginEnd="152dp"
        android:layout_marginBottom="678dp"
        android:scaleX="2"
        android:scaleY="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_foreground"
        android:contentDescription="TODO" />

    <Button
        android:id="@+id/confirmBtn"
        android:layout_width="320dp"
        android:layout_height="110dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="535dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="141dp"
        android:backgroundTint="#51C956"
        android:text="@string/confirm"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/returnToLogBtn4"
        android:layout_width="320dp"
        android:layout_height="110dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="663dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="13dp"
        android:backgroundTint="#51C956"
        android:contentDescription="@string/log_in"
        android:text="@string/Return"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>