<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".logInScreen">

    <ImageView
        android:id="@+id/logoImg6"
        android:layout_width="330dp"
        android:layout_height="155dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="30dp"
        android:scaleX="2"
        android:scaleY="2"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/email2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_foreground" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="7dp"
        android:hint="@string/email"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImg6">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EmailTf2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:targetApi="R" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="31dp"
        android:hint="@string/Password"
        app:layout_constraintBottom_toTopOf="@+id/loginBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordTf2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:targetApi="R" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:layout_gravity="start"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="11dp"
        android:backgroundTint="#409143"
        android:enabled="true"
        android:text="Log In"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/registerBtn"
        app:layout_constraintEnd_toEndOf="@+id/registerBtn"
        app:layout_constraintStart_toStartOf="@+id/registerBtn"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:layout_gravity="start"
        android:layout_marginBottom="11dp"
        android:backgroundTint="#409143"
        android:enabled="true"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/forgotPasswordBtn"
        app:layout_constraintEnd_toEndOf="@+id/forgotPasswordBtn"
        app:layout_constraintStart_toStartOf="@+id/forgotPasswordBtn"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

    <Button
        android:id="@+id/forgotPasswordBtn"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:layout_gravity="start"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="26dp"
        android:backgroundTint="#409143"
        android:enabled="true"
        android:text="Forgot Password?"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerBtn" />



</androidx.constraintlayout.widget.ConstraintLayout>